<resources>

    <string name="hint_email">Enter email</string>
    <string name="hint_password">Enter password</string>

    <string name="phoneNumber">87077287558</string>

    <string name="btn_login">LOGIN</string>
    <string name="btn_regist">REGISTRATION</string>

    <string name="userName">Username</string>
    <string name="userEmail">User_Email</string>

    <string name="fill" translatable="false">Толық толтырыңыз</string>
    <string name="welcome" translatable="false">Қош келдіңіз</string>

    <string name="wrong" translatable="false">Қате пошта немесе пароль</string>

    <string name="app_name">Final</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_title">Family Studio</string>
    <string name="nav_emailtitle">family.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="gpa">Grandpa</string>
    <string name="gma">Grandma</string>
    <string name="mom">Mother</string>
    <string name="profile">Profile</string>
    <string name="bro">Brother</string>
    <string name="secondBro">Second Brother</string>
</resources>