<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authentification.loginActivity"
    android:background="@drawable/gradient">

    <TextView
        android:layout_marginTop="120dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="30dp"
        android:gravity="center"
        android:text="LOGIN OR PASSWORD?" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_centerInParent="true">

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"
            android:drawableLeft="@drawable/baseline_email_24"
            android:drawablePadding="15dp"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"/>

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_email"
            android:textColorHint="@color/white"
            android:drawableLeft="@drawable/baseline_lock_24"
            android:drawablePadding="15dp"
            android:layout_marginTop="10dp"
            android:hint="@string/hint_password"
            android:inputType="textPassword"/>


        <Button
            android:id="@+id/loginBtn"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_password"
            android:backgroundTint="@color/btn_login"
            android:text="@string/btn_login"
            android:textSize="20dp"/>

        <Button
            android:id="@+id/registrationBtn"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/loginBtn"
            android:backgroundTint="@color/white"
            android:text="@string/btn_regist"
            android:textColor="@color/btn_login"
            android:textSize="20dp" />

    </RelativeLayout>

</RelativeLayout>